build_errors_ssfr_2.txt
warning: unused import: `std::sync::Arc`
 --> astraweave-fluids\src\renderer.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `shader`
  --> astraweave-fluids\src\sdf.rs:22:13
   |
22 |         let shader = device.create_shader_module(wgpu::ShaderModuleDescriptor {
   |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_shader`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `config_buffer`
  --> astraweave-fluids\src\sdf.rs:27:13
   |
27 |         let config_buffer = device.create_buffer_init(&wgpu::util::BufferInitDescriptor {
   |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_config_buffer`

warning: unused variable: `jfa_params_buffer`
  --> astraweave-fluids\src\sdf.rs:33:13
   |
33 |         let jfa_params_buffer = device.create_buffer(&wgpu::BufferDescriptor {
   |             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_jfa_params_buffer`

warning: unused variable: `texture_a`
  --> astraweave-fluids\src\sdf.rs:55:13
   |
55 |         let texture_a = device.create_texture(&texture_desc);
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_a`

warning: unused variable: `texture_b`
  --> astraweave-fluids\src\sdf.rs:56:13
   |
56 |         let texture_b = device.create_texture(&texture_desc);
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_b`

warning: multiple fields are never read
  --> astraweave-fluids\src\sdf.rs:4:5
   |
3  | pub struct SdfSystem {
   |            --------- fields in this struct
4  |     init_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^
5  |     step_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^
6  |     finalize_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^^^^^
7  |
8  |     config_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^
9  |     jfa_params_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^^^^^
...
14 |     bind_group_a: wgpu::BindGroup,
   |     ^^^^^^^^^^^^
15 |     bind_group_b: wgpu::BindGroup,
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `astraweave-fluids` (lib) generated 7 warnings (run `cargo fix --lib -p astraweave-fluids` to apply 1 suggestion)
    Checking fluids_demo v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\fluids_demo)
warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\ocean.rs:6:12
  |
6 | use glam::{Mat4, Vec3};
  |            ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: arguments to this method are incorrect
   --> examples\fluids_demo\src\main.rs:430:33
    |
430 |             self.fluid_renderer.render(
    |                                 ^^^^^^
    |
note: method defined here
   --> C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-fluids\src\renderer.rs:472:12
    |
472 |     pub fn render(
    |            ^^^^^^
help: did you mean
    |
430 -             self.fluid_renderer.render(
431 -                 &mut encoder,
432 -                 &view,
433 -                 &self.depth_view,
434 -                 &self.device,
435 -                 &self.queue,
436 -                 particle_buffer,
437 -                 self.fluid_system.particle_count,
438 -                 view_proj,
439 -                 skybox.get_skybox_view(),
440 -             );
430 +             self.fluid_renderer.render(&mut encoder, &view, &self.depth_view, skybox.get_skybox_view(), particle_buffer, self.fluid_system.particle_count, /* CameraUniform */, &self.queue, &self.device);
    |

For more information about this error, try `rustc --explain E0308`.
warning: `fluids_demo` (bin "fluids_demo") generated 1 warning
error: could not compile `fluids_demo` (bin "fluids_demo") due to 1 previous error; 1 warning emitted
